test/e2e/chainsaw/gateway/konnect-static-naming-cross-namespace/01-gatewayconfiguration-staging.yaml
# Konnect-backed GatewayConfiguration and GatewayClass for the "staging" environment.
# The auth config is same-namespace, so authRef needs no namespace and no KongReferenceGrant.
apiVersion: gateway-operator.konghq.com/v2beta1
kind: GatewayConfiguration
metadata:
  name: (join('-', [($test_name), 'staging-gateway-configuration']))
  namespace: ($staging_namespace)
spec:
  konnect:
    authRef:
      name: (join('-', [($test_name), 'staging-konnect-api-auth']))
  dataPlaneOptions:
    deployment:
      podTemplateSpec:
        spec:
          containers:
            - name: proxy
              image: ($gateway_image)
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  # Cluster-scoped: must be unique across concurrent runs.
  name: (join('-', [($test_name), 'staging-gateway-class']))
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: (join('-', [($test_name), 'staging-gateway-configuration']))
    namespace: ($staging_namespace)
