test/e2e/chainsaw/gateway/konnect-static-naming-cross-namespace/02-assert-gatewayclass-staging.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: (join('-', [($test_name), 'staging-gateway-class']))
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
