test/e2e/chainsaw/gateway/konnect-static-naming-cross-namespace/06-assert-gatewayclass-production.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: (join('-', [($test_name), 'production-gateway-class']))
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
